Fixed Margin on mobile
New Game looked ugly on mobile removed marging on #ng.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -117,4 +117,7 @@ body {
         padding-top: 1em;
         padding-bottom: 1em;
     }
+    #ng {
+        margin: 0;
+    }
 }
